--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.datafaker/datafaker -->
+		<dependency>
+			<groupId>net.datafaker</groupId>
+			<artifactId>datafaker</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
+
 		<!-- Spring Boot Starter Security -->
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
