--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 ###JWT Configuracion de secreto y tiempo de token
-#jwt.secret-key=secret
-#jwt.expiration=86400000
-#jwt.refresh-token=604800000
+jwt.secret-key=secret
+jwt.expiration=86400000
+jwt.refresh-token=604800000
 
