--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,13 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
-###JWT Configuracion de secreto y tiempo de token
+#JWT Configuracion de secreto y tiempo de token
 jwt.secret-key=secret
 jwt.expiration=86400000
 jwt.refresh-token=604800000
 
+
+#Para formatear el json resultante, (no es necesario)
+spring.jackson.serialization.INDENT_OUTPUT=true
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=UTC
