persistencia de datos OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-spring.datasource.url=jdbc:h2:mem:diveHub
-spring.datasource.username=sa
-#spring.datasource.password=password
+# Configuración de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/divehub
+spring.datasource.username=root
+spring.datasource.password=
 
-spring.h2.console.enabled=true
-spring.jpa.defer-datasource-initialization=true
+# Configuración para imprimir los scripts de creación de tablas en lugar de ejecutarlos
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
+spring.jpa.show-sql=true
+# Deshabilitar la consola H2
+#spring.h2.console.enabled=false
 
-
-#JWT Configuracion de secreto y tiempo de token
+# Configuración de JWT
 jwt.secret-key=secret
 jwt.expiration=3600000
 
-
-#Para formatear el json resultante, (no es necesario)
+# Otras configuraciones (opcional)
 spring.jackson.serialization.INDENT_OUTPUT=true
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=UTC
