--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
 
 		<!-- H2 Database -->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
 		</dependency>
 
 		<!-- Spring Boot Starter Test -->
