--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-# Configuración de la base de datos MySQL
+# Configuraci?e la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/divehub
 spring.datasource.username=root
 spring.datasource.password=
 
-# Configuración para imprimir los scripts de creación de tablas en lugar de ejecutarlos
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
-spring.jpa.show-sql=true
+# Configuraci?ara imprimir los scripts de creaci?e tablas en lugar de ejecutarlos
+#spring.jpa.properties.hibernate.hbm2ddl.auto=none
+#spring.jpa.show-sql=true
 # Deshabilitar la consola H2
 #spring.h2.console.enabled=false
 
-# Configuración de JWT
+# Configuraci?e JWT
 jwt.secret-key=secret
 jwt.expiration=3600000
 
