--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuracion de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://34.22.233.189:3306/divehub
 spring.datasource.username=root
-spring.datasource.password=19041990
+spring.datasource.password=
 
 # Configuracion de JWT
 jwt.secret-key=secret
