--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
   # Step 1 - Run unit tests inside the docker container
   - name: 'europe-west1-docker.pkg.dev/just-amp-373710/divehub-springboot/despliegueapi:v1'
     entrypoint: java
-    args: ["-jar", "your-app-tests.jar"]
+    args: ["-jar", "diveHub-0.0.1-SNAPSHOT.jar app.jar"]
 
   # Step 2 - Push the docker image to an Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
