--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
       - '-c'
       - |
           docker build -t europe-west1-docker.pkg.dev/linear-encoder-424111-i7/divehub:$COMMIT_SHA .
-          docker push europe-west1-docker.pkg.dev/linear-encoder-424111-i7/divehub:$COMMIT_SHA
+          docker push europe-west1-docker.pkg.dev/linear-encoder-424111-i7/divehub
 
 
   # Step 2 - Deploy the image in a Cloud Run service
